# Degenerus-website

./: .cfignore  .gitignore  CLAUDE.md  CNAME  GAME_THEORY_ANALYSIS.md  README.md  _headers  build-gta-html.py  economics.html  gta-jackpot-widget.html  gta-sim-chart.html  index.html  main.js  restructure.py  styles.css
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/v2.3/harness/: pyproject.toml
.planning/v2.3/harness/harness/: __init__.py  __main__.py  api.py  archetypes.py  constants.py  derive.py  regimes.py  render.py  schema.py  yaml_io.py
.planning/v2.3/harness/tests/: conftest.py  test_api.py  test_archetypes.py  test_constants.py  test_derive.py  test_regimes.py  test_render.py  test_schema.py  test_smoke.py
agents/: index.html
analysis/: index.html
app/: index.html
assets/: index-AIvUx_97.js  index-BKAWPoPf.js  index-BKIZPSDO.js  index-BOepc7Ud.js  index-Bpqy8b0m.css  index-ByQxNfk4.js  index-CiSsfdL-.js  index-Cm-1x7xL.css  index-CtrCPg5d.js  index-D4w6rQ7R.js  index-D7mgGXDr.js  index-DKe1ijNl.css  index-DWvMBOGD.js  index-DYqU8h1u.js  index-DfAV8-pz.js  index-bfSp7zVj.js  index-mEaPzQ9u.js
beta/: badge-size-mockup.html  index.html  jackpot-data.json  mint.js  viewer.html
control/: control.css  control.js  index.html
db/: analysis.db  deployment.json  export-jackpot-data.js
degenerette/: embed.html  index.html
event-indexer/: config.example.json  event_indexer.py  requirements.txt
lootbox/: index.html
play/: index.html
shared/: nav.css  nav.js  player-archetypes.json  score-info.html
sim/: index.html  (+3 more)
(+488 files in other folders)
