[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.1.0"
description = "Degenerus v2.3 expected-value derivation harness"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
validations = [
    "responses>=0.25",
    "eth-utils>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Phase 19 validations live under ../validations/tests; registered here so
# `pytest -q` from the harness dir picks up both Phase 18 and Phase 19 suites.
testpaths = ["tests", "../validations/tests"]
addopts = "-x --no-header"
# keccak choice: use eth_utils (documented); pycryptodome not required.
